Use List#of where possible